FTA reports jdk17 suppression